--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <!-- <body class="mat-typography"> -->
     <app-root></app-root>
   </body>
 </html>
